iptables-rules.txt
# Generated by iptables-nft-save v1.8.10 (nf_tables) on Mon Mar 16 18:03:34 2026
*raw
:PREROUTING ACCEPT [50242:22012661]
:OUTPUT ACCEPT [37190:3539143]
COMMIT
# Completed on Mon Mar 16 18:03:34 2026
# Generated by iptables-nft-save v1.8.10 (nf_tables) on Mon Mar 16 18:03:34 2026
*filter
:INPUT ACCEPT [37050:5151528]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37190:3539143]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -s 192.168.10.0/24 -i ens37 -j ACCEPT
-A INPUT -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.10.100/32 -j LOG --log-prefix "INPUT-KALI: "
-A FORWARD -s 192.168.20.0/24 -d 192.168.20.0/24 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -i ens37 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o ens37 -j ACCEPT
-A FORWARD -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.100/32 -j LOG --log-prefix "KALI-PKT: "
-A FORWARD -s 192.168.10.100/32 -j LOG --log-prefix "KALI-PKT: "
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i docker-iot -o ens33 -j ACCEPT
-A FORWARD -i docker-quar -o ens33 -j ACCEPT
-A FORWARD -i docker-quar -o ens37 -j DROP
-A FORWARD -i docker-quar -o docker-iot -j DROP
-A OUTPUT -o ens37 -p udp -m udp --sport 53 -j ACCEPT
-A DOCKER -i ens37 -o docker-iot -j ACCEPT
-A DOCKER ! -i docker-quar -o docker-quar -j DROP
-A DOCKER ! -i docker-iot -o docker-iot -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker-quar -j DOCKER
-A DOCKER-BRIDGE -o docker-iot -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker-quar -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker-iot -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker-quar -j ACCEPT
-A DOCKER-FORWARD -i docker-iot -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker-quar ! -o docker-quar -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker-iot ! -o docker-iot -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -i ens37 -o docker-iot -j ACCEPT
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker-iot -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker-quar -j DROP
-A DOCKER-USER -s 192.168.20.6/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name energymete-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.6/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name energymete-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.16/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name lighting-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.16/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name lighting-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.4/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 12/min --hashlimit-burst 4 --hashlimit-mode srcip --hashlimit-name sensorhub-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.4/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 4 --hashlimit-mode srcip --hashlimit-name sensorhub-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.9/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 20/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name tv1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.9/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 15/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name tv1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.11/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name thermo1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.11/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name thermo1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.5/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 15/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name nvr-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.5/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 10/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name nvr-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.12/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name envsensor-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.12/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name envsensor-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.7/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name bulb1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.7/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name bulb1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.13/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 28/min --hashlimit-burst 8 --hashlimit-mode srcip --hashlimit-name chromecast-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.13/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 20/min --hashlimit-burst 8 --hashlimit-mode srcip --hashlimit-name chromecast-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.14/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 15/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name cam1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.14/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 10/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name cam1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.8/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name plug1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.8/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name plug1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.2/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name badge-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.2/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name badge-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.3/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 20/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name nas-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.3/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 15/min --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name nas-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.10/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 8/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name lock1-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.10/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name lock1-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -s 192.168.20.15/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 5/min --hashlimit-burst 2 --hashlimit-mode srcip --hashlimit-name printer-hc -j MARK --set-xmark 0x20/0xffffffff
-A DOCKER-USER -s 192.168.20.15/32 -i docker-iot -m state --state NEW -m hashlimit --hashlimit-above 3/min --hashlimit-burst 2 --hashlimit-mode srcip --hashlimit-name printer-sc -j MARK --set-xmark 0x10/0xffffffff
-A DOCKER-USER -i docker-iot -o docker-iot -j DROP
-A DOCKER-USER -i docker-iot -o ens37 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -i docker-iot -o ens37 -j DROP
COMMIT
# Completed on Mon Mar 16 18:03:34 2026
# Generated by iptables-nft-save v1.8.10 (nf_tables) on Mon Mar 16 18:03:34 2026
*nat
:PREROUTING ACCEPT [1066:384737]
:INPUT ACCEPT [14:321851]
:OUTPUT ACCEPT [390:31593]
:POSTROUTING ACCEPT [390:31593]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.20.0/24 ! -o docker-iot -j MASQUERADE
-A POSTROUTING -s 192.168.30.0/24 ! -o docker-quar -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o ens33 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i docker-iot -j RETURN
-A DOCKER -i docker-quar -j RETURN
COMMIT
# Completed on Mon Mar 16 18:03:34 2026
