netfilter-rules-v4.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Mar 15 12:52:33 2026
*raw
:PREROUTING ACCEPT [64524:7019042]
:OUTPUT ACCEPT [65121:6262608]
COMMIT
# Completed on Sun Mar 15 12:52:33 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Mar 15 12:52:33 2026
*filter
:INPUT ACCEPT [62494:6852181]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [65121:6262608]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -s 192.168.10.0/24 -i ens37 -j ACCEPT
-A INPUT -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.10.100/32 -j LOG --log-prefix "INPUT-KALI: "
-A FORWARD -s 192.168.20.0/24 -d 192.168.20.0/24 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -i ens37 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o ens37 -j ACCEPT
-A FORWARD -i ens37 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i ens37 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.10.100/32 -j LOG --log-prefix "KALI-PKT: "
-A FORWARD -s 192.168.10.100/32 -j LOG --log-prefix "KALI-PKT: "
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i ens37 -o docker-iot -j ACCEPT
-A FORWARD -i docker-iot -o ens33 -j ACCEPT
-A FORWARD -i docker-quar -o ens33 -j ACCEPT
-A FORWARD -i docker-quar -o ens37 -j DROP
-A FORWARD -i docker-quar -o docker-iot -j DROP
-A OUTPUT -o ens37 -p udp -m udp --sport 53 -j ACCEPT
-A DOCKER -i ens37 -o docker-iot -j ACCEPT
-A DOCKER ! -i docker-quar -o docker-quar -j DROP
-A DOCKER ! -i docker-iot -o docker-iot -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker-quar -j DOCKER
-A DOCKER-BRIDGE -o docker-iot -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker-quar -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker-iot -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker-quar -j ACCEPT
-A DOCKER-FORWARD -i docker-iot -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker-quar ! -o docker-quar -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker-iot ! -o docker-iot -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -i ens37 -o docker-iot -j ACCEPT
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker-iot -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker-quar -j DROP
-A DOCKER-USER -i docker-iot -o docker-iot -j DROP
-A DOCKER-USER -i docker-iot -o ens37 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -i docker-iot -o ens37 -j DROP
COMMIT
# Completed on Sun Mar 15 12:52:33 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Mar 15 12:52:33 2026
*nat
:PREROUTING ACCEPT [1273:105039]
:INPUT ACCEPT [5:356]
:OUTPUT ACCEPT [2361:160732]
:POSTROUTING ACCEPT [3570:261087]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.20.0/24 ! -o docker-iot -j MASQUERADE
-A POSTROUTING -s 192.168.30.0/24 ! -o docker-quar -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o ens33 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i docker-iot -j RETURN
-A DOCKER -i docker-quar -j RETURN
COMMIT
# Completed on Sun Mar 15 12:52:33 2026
